    defining basic temporal interval relations to the library (based on the
    James F. Allen Interval Algebra work).

    Added a category implementing named integer counters, "counters", to the
    library.

    Added predicates proper_prefix/2 and proper_suffix/2 to the library
    entities "listp", "list", and "difflist".

    Added predicate transpose/2 to the library object "pairs".

    Added missing syntax coloring of the else/1 conditional compilation
    directive to the GNU Source-highlight highlighter support.

    Added a note on the Logtalk text editing support available on the free
    MacOS X Kod text editor.


2.42.1 - December 22, 2010

    Added support to the Logtalk compiler for detecting and reporting
    missing dynamic/1 and discontiguous/1 predicate directives.

    Added a new lint flag, "missing_directives", with a default value of
    "warning", to all config files. This flag enables printing of compiler
    warnings for missing dynamic/1, discontiguous/1, and multifile/1 predicate
    directives.

    Added support for new meta-predicate template mode indicators: (/) for a
    predicate indicator, [/] for a list of predicate indicators, and [0] for
    a list of goals.

    Corrected a bug in the Logtalk compiler when checking meta-predicate
    clause heads for errors where the "::" meta-argument mode indicator
    was still being interpreted as "0".

    Corrected a bug in the handling of closures (in meta-calls) that are
    used to construct calls to control constructs or built-in predicates
    which could result in calling some meta-arguments in the wrong context.
    Thanks to Ulrich Neumerkel for the illustrating example in the SWI-Prolog
    mailing list.

    Updated the Logtalk compiler in order to avoid printing warnings about
    missing references to the "expanding" and "monitoring" built-in protocols
    when compiling modules as objects.

    Reverted the changes in version 2.39.2 that allowed the pseudo-object