@@ -1,0 +1,25 @@
+================================================================
+Logtalk - Open source object-oriented logic programming language
+Release 2.42.2
+
+Copyright (c) 1998-2011 Paulo Moura.        All Rights Reserved.
+Logtalk is free software.  You can redistribute it and/or modify
+it under the terms of the "Artistic License 2.0" as published by 
+The Perl Foundation. Consult the "LICENSE.txt" file for details.
+================================================================
+
+
+This directory contains files that provide support for using version 3.0.83 
+or later of the SyntaxHighlighter package by Alex Gorbatchev with Logtalk 
+source files. A detailed description on the SyntaxHighlighter package is 
+available from:
+
+	http://alexgorbatchev.com/SyntaxHighlighter/
+
+These support files are dual-licensed under the Artistic License 2.0 
+and the SyntaxHighlighter license.
+
+In order to check if your SyntaxHighlighter distribution already includes 
+support for Logtalk, look for a file named "shBrushLogtalk.js" in the
+"scripts" folder. If support for Logtalk is not included or if it is
+outdated, copy the file "shBrushLogtalk.js" to the "scripts" folder.
