@@ -40,6 +40,9 @@ RELEASE NOTES
 
     Added predicate transpose/2 to the library object "pairs".
 
+    Added support for using the SyntaxHighlighter package (version 3.0.83 or
+    later) by Alex Gorbatchev with Logtalk source code.
+
     Added missing syntax coloring of the else/1 conditional compilation
     directive to the GNU Source-highlight highlighter support.
 
